[metadata]
name = flask-restful-auth
version = 0.0.1
author = Example Author
author_email = author@example.com
description = R E S T !
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mcqueen256/Flask-RESTful-Auth
project_urls =
    Issues Tracker = https://github.com/mcqueen256/Flask-RESTful-Auth/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src