[metadata]
url = https://github.com/mcqueen256/Flask-RESTful-Auth
project_urls =
    Issues Tracker = https://github.com/mcqueen256/Flask-RESTful-Auth/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

# [options]
# package_dir =
#     = src
# packages = find:
# python_requires = >=3.6

# [options.packages.find]
# where = src

[aliases]
test=pytest

[bdist_wheel]
universal=1