# Use this file to override settings in the setup.py file.

[metadata]
url = https://github.com/mcqueen256/Flask-RESTful-Auth
project_urls =
    Issues Tracker = https://github.com/mcqueen256/Flask-RESTful-Auth/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[aliases]
test=pytest

[bdist_wheel]
universal=1